--- a/app/src/main/res/layout/product_row.xml
+++ b/app/src/main/res/layout/product_row.xml
@@ -11,6 +11,7 @@
         android:id="@+id/photo"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:scaleType="centerCrop"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
