--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto"
-      xmlns:tools="http://schemas.android.com/tools"
-      tools:context="com.danielmalone.dansecommerce.MainActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.danielmalone.dansecommerce.MainActivity">
 
     <group android:checkableBehavior="single">
 
@@ -10,42 +10,42 @@
             android:icon="@drawable/ic_monetization_on_black_24dp"
             android:orderInCategory="100"
             android:title="Home"
-            app:showAsAction="never"/>
+            app:showAsAction="never" />
 
         <item
             android:id="@+id/actionJeans"
             android:icon="@drawable/ic_monetization_on_black_24dp"
             android:orderInCategory="100"
             android:title="Jeans"
-            app:showAsAction="never"/>
+            app:showAsAction="never" />
 
         <item
             android:id="@+id/actionShorts"
             android:icon="@drawable/ic_monetization_on_black_24dp"
             android:orderInCategory="100"
             android:title="Shorts"
-            app:showAsAction="never"/>
+            app:showAsAction="never" />
 
         <item
             android:id="@+id/action_settings4"
             android:icon="@drawable/ic_search_black_24dp"
             android:orderInCategory="100"
             android:title="Socks"
-            app:showAsAction="never"/>
+            app:showAsAction="never" />
 
         <item
             android:id="@+id/action_settings5"
             android:icon="@drawable/ic_monetization_on_black_24dp"
             android:orderInCategory="100"
             android:title="@string/action_settings"
-            app:showAsAction="never"/>
+            app:showAsAction="never" />
 
         <item
-            android:id="@+id/action_settings6"
-            android:icon="@drawable/ic_monetization_on_black_24dp"
+            android:id="@+id/actionAdmin"
+            android:icon="@drawable/ic_playlist_add_black_24dp"
             android:orderInCategory="100"
-            android:title="@string/action_settings"
-            app:showAsAction="never"/>
+            android:title="Admin"
+            app:showAsAction="never" />
 
     </group>
 
